--- a/js-practice-questions.html
+++ b/js-practice-questions.html
@@ -11,91 +11,7 @@
 <body>
     <h1>Practice Questions</h1>
 
-    <!-- Reducer -->
-    <!-- <script>
-        const reducer = (a, b) => Math.max(a, b);
-
-        let newArray = [2,4,212, 453, 2031, 26, 737, 100];
-
-        console.log(
-            newArray.reduce(reducer)
-        ); 
-
-    </script> -->
-
-    <!-- Enqueue and Dequeue -->
-    <!-- <script>
-        const firstArray = [1, 2, 3, 4, 5];
-        const secondArray = [];
-
-        const dequeue = (firstArray) => {
-            while (firstArray.length > 0) {
-                const lastFirst = firstArray.pop();
-                // not sure why push is working here rather than unshift but it does work
-                secondArray.push(lastFirst);
-            }
-        };
-
-        // Push - Add to end
-        // Pop - Remove from end
-        // Unshift - Add to start
-        // Shift - Remove from start
-
-    </script> -->
-
-    <!-- Integer -->
-    <!-- <script>
-        const isInteger = (number) => {
-            return number % 1 === 0;
-        };
-
-    </script> -->
-
-    <!-- Empty Array -->
-    <!-- <script>
-        let newArray = [1, 2, 3, 4];
-
-        // #1 - Does not work if newArray was initialized as constant
-        newArray = [];
-
-        // #2 - Does work if newArray was initialized as constant
-        newArray.length = 0;
-
-        // #3 - Splices the whole array out of the initial array leaving an empty array
-        newArray.splice(0, newArray.length);
-    </script> -->
-
-    <!-- Check if array -->
-    <!-- <script>
-        const checkIfArray = (object) => {
-            if (Array.isArray(object)) {
-                return true;
-            } else {
-                return false;
-            };
-        };
-    </script> -->
-
-    <!-- Reverse Words -->
-    <!-- <script>
-        const sentence = "Testing to see if I can reverse each word and the whole sentence";
-
-        const reverseString = (string, separator) => {
-            // split the string by separator (this would be by a space for a sentence and a blank string for a word). Then we use the .reverse for the array that we have from the split. After this we can rejoin the array back to a string using the separator. 
-            return string.split(separator).reverse().join(separator);
-        };
-
-        // To first reverse the order of the words
-        let reversedSentence = reverseString(sentence, " ");
-
-        // This reverses all the characters in the sentence
-        // What this does in particular is reverse everything back such that the words are in the original order but all their individual characters are reversed.
-        let reversedString = reverseString(reversedSentence, "");
-
-        console.log(reversedSentence);
-
-        console.log(reversedString);
-    </script> -->
+    <script src="./script.js"></script>
 </body>
 
 </html>
